# Dero-Baccarat

./: README.md  mainwindow.ui
DeroBaccTestnet/: test.txt
Licenses/: copyright.md
Mainnet-Baccarat/: Dero-Baccarat.pro  daemon_rpc.cpp  dialog.cpp  dialog.h  dialog.ui  help.cpp  help.h  help.ui  img.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rpc.h  wallet_rpc.cpp
Mainnet-Baccarat/Mainnet-Baccarat/: dialog.cpp  dialog.ui  help.h  help.ui  img.qrc
Mainnet-Baccarat/Mainnet-Baccarat/rpc/: daemon_rpc.cpp  wallet_rpc.cpp
Mainnet-Baccarat/rpc/: daemon_rpc.cpp  rpc.h  wallet_rpc.cpp
Testnet-Baccarat/: CMakeLists.txt  Makefile  New-Baccarat.pro  New-Baccarat.pro.user.a48d7f9  Testnet-Baccarat.pro  confirmmenu.cpp  confirmmenu.h  confirmmenu.ui  daemon_rpc.cpp  dialog.cpp  dialog.h  dialog.ui  help.cpp  help.h  help.ui  helpmenu.cpp  helpmenu.h  helpmenu.ui  img.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rpc.h  wallet_rpc.cpp
